# projet_api_webscrap

./: .gitignore  debug_trustpilot.py  pyproject.toml  test_scraper_boursobank.py  test_scraper_trustpilot.py  test_scraper_yelp_selenium.py  trustpilot_boursobank_com_fr.csv
data/: reviews_all_clean.csv  reviews_all_with_sentiment.csv  reviews_trustpilot_carhartt_clean.csv  trustpilot_carhartt-wip_com_fr.csv  yelp_reviews_clean.csv  yelp_reviews_selenium_page1.csv
notebooks/: eda_trustpilot.ipynb  eda_yelp.ipynb
src/api/: main.py  routes.py
src/nlp/: response_generator.py  sentiment.py
src/scraper/: trustpilot_scraper.py  yelp_selenium_scraper.py
src/utils/: cleaning.py
