[project]
name = "api"
version = "0.1.0"
description = ""
authors = [
    {name = "djema"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "langdetect (>=1.0.9,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "protobuf (>=6.33.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
